fixed an error with heads being too big, updated modules

--- a/themes/md/scss/imports/_portfolio-holder.scss
+++ b/themes/md/scss/imports/_portfolio-holder.scss
@@ -1,7 +1,10 @@
 
  .portfolio-card-list{
 
+ 	img.portfolio-cover-image{
+ 		width: 100%;
 
+ 	}
  	li{
  		min-height: 200px;
  		overflow: hidden;
@@ -9,9 +12,7 @@
  		&.blog-card{
  			img{ width: 100%}
  		}
- 		img{
- 			width: 100%;
- 		}
+
  		a{
  			background: #eee;
  			display: block;
